--- a/.packit.yaml
+++ b/.packit.yaml
@@ -23,3 +23,34 @@ jobs:
   metadata:
     dist_git_branches:
       - fedora-all
+- job: copr_build
+  trigger: pull_request
+  metadata:
+    targets:
+    - centos-stream-8-aarch64
+    - centos-stream-8-x86_64
+    - centos-stream-9-aarch64
+    - centos-stream-9-x86_64
+    - epel-8-aarch64
+    - epel-8-x86_64
+    - fedora-all-aarch64
+    #- fedora-all-s390x  # go binary segfaults in the emulated environment
+    - fedora-all-ppc64le
+    - fedora-all
+- job: copr_build
+  trigger: commit
+  metadata:
+    branch: main
+    owner: "@osbuild" # copr repo namespace
+    project: osbuild-composer  # copr repo name so you can consume the builds
+    targets:
+    - centos-stream-8-aarch64
+    - centos-stream-8-x86_64
+    - centos-stream-9-aarch64
+    - centos-stream-9-x86_64
+    - epel-8-aarch64
+    - epel-8-x86_64
+    - fedora-all-aarch64
+    #- fedora-all-s390x  # go binary segfaults in the emulated environment
+    - fedora-all-ppc64le
+    - fedora-all
