--- a/templates/dashboards/grafana-dashboard-image-builder-composer-general.configmap.yml
+++ b/templates/dashboards/grafana-dashboard-image-builder-composer-general.configmap.yml
@@ -32,8 +32,8 @@ data:
       "fiscalYearStartMonth": 0,
       "gnetId": null,
       "graphTooltip": 0,
-      "id": 32,
-      "iteration": 1638482859201,
+      "id": 219,
+      "iteration": 1638547440887,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -130,7 +130,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "1 - sum(increase(image_builder_composer_total_failed_compose_requests[$interval]))/sum(increase(image_builder_composer_total_compose_requests[$interval]))",
+              "expr": "1 - sum(increase(image_builder_composer_total_failed_compose_requests[$__range]))/sum(increase(image_builder_composer_total_compose_requests[$__range]))",
               "interval": "",
               "legendFormat": "",
               "refId": "A"
@@ -465,7 +465,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "28 * 24 * (1 - $stability_slo) / ((sum(rate(image_builder_composer_total_failed_compose_requests[$interval]))/ sum(rate(image_builder_composer_total_compose_requests[$interval]))) + 0.001)",
+              "expr": "28 * 24 * (1 - $stability_slo) / ((sum(rate(image_builder_composer_total_failed_compose_requests[28d]))/ sum(rate(image_builder_composer_total_compose_requests[28d]))) + 0.001)",
               "format": "time_series",
               "interval": "",
               "intervalFactor": 1,
@@ -564,7 +564,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "1 - ((1 - sum(increase(image_builder_composer_total_failed_compose_requests[$interval]))/sum(increase(image_builder_composer_total_compose_requests[$interval]))) - $stability_slo)/ (1 - $stability_slo)",
+              "expr": "1 - ((1 - sum(increase(image_builder_composer_total_failed_compose_requests[28d]))/sum(increase(image_builder_composer_total_compose_requests[28d]))) - $stability_slo)/ (1 - $stability_slo)",
               "instant": false,
               "interval": "",
               "intervalFactor": 10,
@@ -670,7 +670,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "histogram_quantile(0.9, sum(rate(image_builder_composer_http_duration_seconds_bucket[$interval])) by (le)) * 1000",
+              "expr": "histogram_quantile(0.9, sum(rate(image_builder_composer_http_duration_seconds_bucket[$__range])) by (le)) * 1000",
               "interval": "",
               "legendFormat": "",
               "refId": "A"
@@ -1059,7 +1059,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "28 * 24 * (1 - $latency_slo) / (1 - sum(rate(image_builder_composer_http_duration_seconds_bucket{le=\"0.2\"}[$interval]))/sum(rate(image_builder_composer_http_duration_seconds_count[$interval])))",
+              "expr": "28 * 24 * (1 - $latency_slo) / (1 - sum(rate(image_builder_composer_http_duration_seconds_bucket{le=\"0.2\"}[$__range]))/sum(rate(image_builder_composer_http_duration_seconds_count[$__range])))",
               "format": "time_series",
               "interval": "",
               "intervalFactor": 1,
@@ -1157,7 +1157,7 @@ data:
           "targets": [
             {
               "exemplar": true,
-              "expr": "1 - ((sum(increase(image_builder_composer_http_duration_seconds_bucket{le=\"0.2\"}[$interval]))/sum(increase(image_builder_composer_http_duration_seconds_count[$interval]))) - $latency_slo)/ (1 - $latency_slo)",
+              "expr": "1 - ((sum(increase(image_builder_composer_http_duration_seconds_bucket{le=\"0.2\"}[28d]))/sum(increase(image_builder_composer_http_duration_seconds_count[28d]))) - $latency_slo)/ (1 - $latency_slo)",
               "instant": false,
               "interval": "",
               "intervalFactor": 10,
@@ -1203,9 +1203,9 @@ data:
             "auto_count": 30,
             "auto_min": "10s",
             "current": {
-              "selected": false,
-              "text": "5m",
-              "value": "5m"
+              "selected": true,
+              "text": "14d",
+              "value": "14d"
             },
             "description": null,
             "error": null,
@@ -1214,7 +1214,7 @@ data:
             "name": "interval",
             "options": [
               {
-                "selected": true,
+                "selected": false,
                 "text": "5m",
                 "value": "5m"
               },
@@ -1254,7 +1254,7 @@ data:
                 "value": "7d"
               },
               {
-                "selected": false,
+                "selected": true,
                 "text": "14d",
                 "value": "14d"
               },
@@ -1293,7 +1293,7 @@ data:
         ]
       },
       "time": {
-        "from": "now-30d",
+        "from": "now-7d",
         "to": "now"
       },
       "timepicker": {
@@ -1323,6 +1323,6 @@ data:
       },
       "timezone": "",
       "title": "Image Builder Composer",
-      "uid": "cNGfs4Knz",
-      "version": 1
+      "uid": "cNGfs4Knzasdf",
+      "version": 3
     }
