composer: Disable artifacts for the service
When backed by a DB, composer has no need of a queue directory.

This also addresses "Error moving artifacts for job" logging noise.

Signed-off-by: sanne <sanne.raymaekers@gmail.com>

--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -214,6 +214,7 @@ objects:
       [worker]
       request_job_timeout = "20s"
       base_path = "/api/image-builder-worker/v1"
+      enable_artifacts = false
       enable_tls = false
       enable_mtls = false
       enable_jwt = true
