packer: add initialization scripts
The worker needs quite a lot of configuration involving secrets. Baking them
in the AMI is just awful so we need to fetch them during the instance startup.

Previously, this was all done using cloud-init. This makes the cloud-init
config huge and it is also very hard to test.

This commit moves all the configuration scripts into the image itself.
Cloud-init still needs to be used to push the secret variables into the
instance. The configuration scripts are run after cloud-init. They pick up
yhe secrets and initialize the worker correctly.

These scripts were adopted from
https://github.com/osbuild/image-builder-terraform/commit/75b752a1c00c4ce931962d902a2a61c9998948f2
(private repository).

During the adoption, some changes has to be applied to make shellcheck happy.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/templates/packer/ansible/roles/common/tasks/main.yml
+++ b/templates/packer/ansible/roles/common/tasks/main.yml
@@ -6,5 +6,8 @@
 # Configure monitoring.
 - include_tasks: monitoring.yml
 
+# Configure worker initialization service.
+- include_tasks: worker-initialization-service.yml
+
 - name: Ensure SELinux contexts are updated
   command: restorecon -Rv /etc
